--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title>My Javascript Projects</title>
 </head>
 <body>
     <h1>My JAVASCRIPT projects</h1>
+    <ol>
+        <a href="index.html">  <li>Project 1</li> </a>
+    </ol>
 </body>
 </html>
