just changes anchor tag at 38

--- a/p01/index.html
+++ b/p01/index.html
@@ -35,7 +35,7 @@
                         <button>submit</button>
                       
         </form>
-        <a href="../index.html">
+        <a href="..">
             <button class="home">Home</button>
         </a>
     </div>
